[Finishes #166760358] Documentation update reflects reset password
